// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bounce Chart should handle breadcrumb 1`] = `
Object {
  "active": Object {
    "children": Array [
      Object {
        "count": 2,
        "name": "softchild1",
      },
      Object {
        "count": 3,
        "name": "softchild2",
      },
    ],
    "count": 1,
    "name": "soft",
  },
  "hoveredItem": null,
}
`;

exports[`Bounce Chart should handle breadcrumb 2`] = `
Object {
  "active": null,
  "hoveredItem": null,
}
`;

exports[`Bounce Chart should handle mouse in and out 1`] = `
Object {
  "active": null,
  "hoveredItem": Object {
    "count": 20,
    "dataSet": "secondary",
    "index": 0,
    "name": "in",
  },
}
`;

exports[`Bounce Chart should handle mouse in and out 2`] = `
<PieChart.ActiveLabel
  name="in"
  value="40%"
/>
`;

exports[`Bounce Chart should handle mouse in and out 3`] = `
<PieChart.ActiveLabel
  name="Bounce Rate"
  value="50%"
/>
`;

exports[`Bounce Chart should handle mouse in and out 4`] = `
Object {
  "active": null,
  "hoveredItem": null,
}
`;

exports[`Bounce Chart should handle mouse in and out 5`] = `
<PieChart.ActiveLabel
  name="Admin Failure"
  value="20%"
/>
`;

exports[`Bounce Chart should handle mouse in and out 6`] = `
Object {
  "active": null,
  "hoveredItem": Object {
    "count": 2,
    "dataSet": undefined,
    "index": -1,
    "name": "Admin Failure",
  },
}
`;

exports[`Bounce Chart should not do anything if clicking on an item without children 1`] = `
Object {
  "active": null,
  "hoveredItem": null,
}
`;

exports[`Bounce Chart should render 1`] = `
<Panel
  sectioned={true}
>
  <Grid>
    <Grid.Column
      lg={5}
      xs={12}
    >
      <div
        className="ChartWrapper"
      >
        <LoadableComponent
          hoveredItem={null}
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          primaryData={
            Array [
              Object {
                "count": 5,
                "fill": "hsl(355.1, 70.5%, 52.2%)",
                "name": "hard",
              },
              Object {
                "children": Array [
                  Object {
                    "count": 2,
                    "name": "softchild1",
                  },
                  Object {
                    "count": 3,
                    "name": "softchild2",
                  },
                ],
                "count": 1,
                "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
                "name": "soft",
              },
            ]
          }
          secondaryData={
            Array [
              Object {
                "count": 20,
                "fill": "hsl(198.20000000000005, 70.2%, 53.9%)",
                "name": "in",
              },
              Object {
                "count": 30,
                "fill": "hsl(228.20000000000005, 73.7%, 53.9%)",
                "name": "out",
              },
            ]
          }
        />
        <PieChart.ActiveLabel
          name="Bounce Rate"
          value="50%"
        />
      </div>
    </Grid.Column>
    <Grid.Column
      lg={7}
      xs={12}
    >
      <PieChart.Legend
        headerData={
          Array [
            Object {
              "count": 50,
              "name": "Bounces",
            },
            Object {
              "count": 100,
              "name": "Sent",
            },
          ]
        }
        hoveredItem={null}
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        primaryData={
          Array [
            Object {
              "count": 5,
              "fill": "hsl(355.1, 70.5%, 52.2%)",
              "name": "hard",
            },
            Object {
              "children": Array [
                Object {
                  "count": 2,
                  "name": "softchild1",
                },
                Object {
                  "count": 3,
                  "name": "softchild2",
                },
              ],
              "count": 1,
              "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
              "name": "soft",
            },
          ]
        }
        secondaryData={
          Array [
            Object {
              "count": 20,
              "fill": "hsl(198.20000000000005, 70.2%, 53.9%)",
              "name": "in",
            },
            Object {
              "count": 30,
              "fill": "hsl(228.20000000000005, 73.7%, 53.9%)",
              "name": "out",
            },
          ]
        }
      />
    </Grid.Column>
  </Grid>
</Panel>
`;

exports[`Bounce Chart should render admin bounces chart when on admin bounces tab 1`] = `
<LoadableComponent
  hoveredItem={null}
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  primaryData={
    Array [
      Object {
        "count": 5,
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "admin failure",
      },
      Object {
        "count": 1,
        "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
        "name": "smart send",
      },
    ]
  }
  secondaryData={null}
/>
`;

exports[`Bounce Chart should render bounces chart when on bounces tab 1`] = `
<LoadableComponent
  hoveredItem={null}
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  primaryData={
    Array [
      Object {
        "count": 5,
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "hard",
      },
      Object {
        "children": Array [
          Object {
            "count": 2,
            "name": "softchild1",
          },
          Object {
            "count": 3,
            "name": "softchild2",
          },
        ],
        "count": 1,
        "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
        "name": "soft",
      },
    ]
  }
  secondaryData={
    Array [
      Object {
        "count": 20,
        "fill": "hsl(198.20000000000005, 70.2%, 53.9%)",
        "name": "in",
      },
      Object {
        "count": 30,
        "fill": "hsl(228.20000000000005, 73.7%, 53.9%)",
        "name": "out",
      },
    ]
  }
/>
`;

exports[`Bounce Chart should render correctly after click 1`] = `
<PieChart.Legend
  headerData={
    Array [
      Object {
        "breadcrumb": true,
        "count": 50,
        "name": "Bounces",
        "onClick": [Function],
      },
      Object {
        "count": 100,
        "name": "Sent",
      },
      Object {
        "count": 1,
        "name": "soft",
      },
    ]
  }
  hoveredItem={null}
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  primaryData={
    Array [
      Object {
        "count": 2,
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "softchild1",
      },
      Object {
        "count": 3,
        "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
        "name": "softchild2",
      },
    ]
  }
  secondaryData={null}
/>
`;

exports[`Bounce Chart should render correctly after click 2`] = `
<LoadableComponent
  hoveredItem={null}
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  primaryData={
    Array [
      Object {
        "count": 2,
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "softchild1",
      },
      Object {
        "count": 3,
        "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
        "name": "softchild2",
      },
    ]
  }
  secondaryData={null}
/>
`;

exports[`Bounce Chart should render label when hovering over a child 1`] = `
<PieChart.ActiveLabel
  name="softchild1"
  value="4%"
/>
`;

exports[`Bounce Chart should render loading 1`] = `
<Panel
  className="LoadingPanel"
  sectioned={true}
>
  <Loading />
</Panel>
`;

exports[`Bounce Chart should switch legends when clicking on admin tab even when children data is in bounce tab 1`] = `
<PieChart.Legend
  headerData={
    Array [
      Object {
        "count": 10,
        "name": "Admin Bounces",
      },
      Object {
        "count": 60,
        "name": "Targeted",
      },
    ]
  }
  hoveredItem={null}
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  primaryData={
    Array [
      Object {
        "count": 5,
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "admin failure",
      },
      Object {
        "count": 1,
        "fill": "hsl(35.10000000000002, 72.6%, 52.2%)",
        "name": "smart send",
      },
    ]
  }
  secondaryData={null}
/>
`;
